--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,4 +5,11 @@ body {
   background: #111;
   color: #eee;
   font-family: 'Calibri', serif;
+  height: 100vh;
+  //overflow: hidden;
+
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
