--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-dark bg-dark sticky-top" >
-    <a class="navbar-brand mr-auto" href="#">Fixed top</a>
+    <a class="navbar-brand mr-auto" href="#">
+        <img class="img-fluid logo" alt="logo" src="./assets/img/television-icon.png">
+    </a>
     <app-search-form (searchValueChange)="onSearchValueChange($event)"></app-search-form>
     <a class="nav-link text-success pl-3" routerLink="/login" routerLinkActive="active">
         <span class="text-success">
