--- a/src/app/layout/search-shows/search-shows.component.html
+++ b/src/app/layout/search-shows/search-shows.component.html
@@ -20,8 +20,15 @@
             <div class="position-absolute logo-title-caption h2">
                 Welcome!
             </div>
-            <div class="position-absolute logo-caption ">Search for your favourite shows, by simply typing the name in
-                top bar and hitting enter or clicking the search button with the mouse.
+            <div class="position-absolute logo-caption ">
+                <p>This page is created with
+                    <a href="https://angular.io/" target="_blank">Angular</a>
+                    <span> and powered by </span>
+                    <a href="https://www.thetvdb.com/" target="_blank">The TvDb</a>.
+                </p>
+                <p>Search for your favourite shows, by simply typing the name in
+                    top bar and hitting enter or clicking the search button with the mouse.
+                </p>
             </div>
         </div>
     </ng-template>
