--- a/src/app/layout/search-shows/show-card/show-card.component.html
+++ b/src/app/layout/search-shows/show-card/show-card.component.html
@@ -17,7 +17,10 @@
 
 
         <div>
-            <p>{{tvShow.overview}}</p>
+            <p>
+                {{(showMore) ? tvShow.overview : tvShow.overview | slice:0:600}}
+                <span class="text-muted cursor-pointer" *ngIf="!showMore" (click)="showMore=true">Show More...</span>
+            </p>
         </div>
 
     </div>
