--- a/src/app/layout/show-details/show-details.component.html
+++ b/src/app/layout/show-details/show-details.component.html
@@ -14,7 +14,7 @@
                         <div>{{details.airsTime }}</div>
                         <div>{{details.genre}}</div>
                         <div>
-                            <app-custom-rating [rate]="details.siteRating"></app-custom-rating>
+                            <app-custom-rating [rate]="details.siteRating/2"></app-custom-rating>
                         </div>
                         <div>{{details.overview}}</div>
 
