--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-dark bg-dark sticky-top" >
-    <a class="navbar-brand mr-auto" href="#">
+    <a class="navbar-brand mr-auto" routerLink="/search">
         <img class="img-fluid logo" alt="logo" src="./assets/img/television-icon.png">
     </a>
-    <app-search-form (searchValueChange)="onSearchValueChange($event)"></app-search-form>
+    <app-search-form *ngIf="displaySearch" (searchValueChange)="onSearchValueChange($event)"></app-search-form>
     <a class="nav-link text-success pl-3" routerLink="/login" routerLinkActive="active">
         <span class="text-success">
              <fa-icon [icon]="faSignOutAlt"></fa-icon>
