--- a/src/app/layout/show-episodes/show-episodes.component.scss
+++ b/src/app/layout/show-episodes/show-episodes.component.scss
@@ -1,57 +1,3 @@
-.main {
-  box-shadow: 2px 2px 4px 4px #222;
-  .table-header-wrapper{
-    background: transparent;
-    .table-header {
-      background: #4e4e5e;
-      h5 {
-        margin: 0;
-        padding: 0.75rem 0.75rem 0;
-      }
-      table {
-        margin-bottom: 0 !important;
-        th:nth-child(1) {
-          width: 20% !important;
-        }
-        th:nth-child(2) {
-          width: 20% !important;
-        }
-        th:nth-child(3) {
-          width: 20% !important;
-        }
-        th:nth-child(4) {
-           width: 20% !important;
-        }
-        th:nth-child(5) {
-          width: 20% !important;
-        }
-      }
-    }
-  }
-  .tables-wrapper::-webkit-scrollbar { /* WebKit */
-     width: 0;
-  }
-  .tables-wrapper {
-    max-height: calc(100vh - 205px);
-    overflow-y: scroll;
-     scrollbar-width: none;
-    table {
-      margin-bottom: 0 !important;
-      th:nth-child(1) {
-        width: 20% !important;
-      }
-      th:nth-child(2) {
-        width: 20% !important;
-      }
-      th:nth-child(3) {
-        width: 20% !important;
-      }
-      th:nth-child(4) {
-        width: 20% !important;
-      }
-      th:nth-child(5) {
-        width: 20% !important;
-      }
-    }
-  }
+.rating-text {
+  font-size: 1.5rem;
 }
