--- a/src/app/layout/login/login.component.html
+++ b/src/app/layout/login/login.component.html
@@ -1,1 +1,60 @@
-<p>login works!</p>
+<!---todo needs a much better implementation-->
+<div class="h-100 d-flex justify-content-center align-items-center">
+    <div class="login-form">
+        <div class="d-flex justify-content-center align-items-center h-25">
+            <p>
+                <span class="h2">Login to TV Shows</span><br>
+            </p>
+        </div>
+        <div class="d-flex justify-content-center align-items-center h-75">
+
+            <div class="w-75">
+                <div>
+                    <form [ngClass] = "{'invalid':false}" class="d-flex flex-row border-bottom border-success">
+                        <span class="d-flex justify-content-center"><fa-icon [icon]="faUser"></fa-icon>
+                        </span>
+                        <input class="w-100 ml-2 border-0 bg-transparent text-white" placeholder="Name"  />
+                    </form>
+                </div><br>
+
+                <div>
+                    <form [ngClass] = "{'invalid':false}" class="d-flex flex-row border-bottom border-success">
+                        <span class="d-flex justify-content-center"><fa-icon [icon]="faKey"></fa-icon>
+                        </span>
+                        <input #pass type="password" class="w-100 ml-2 border-0 bg-transparent text-white" placeholder="UserKey"/>
+                    </form>
+                </div><br>
+
+                <div>
+                    <form [ngClass] = "{'invalid':false}" class="d-flex flex-row border-bottom border-success">
+                        <span class="d-flex justify-content-center"><fa-icon [icon]="faKey"></fa-icon>
+                        </span>
+                        <input #pass type="password" class="w-100 ml-2 border-0 bg-transparent text-white" placeholder="ApiKey"/>
+                    </form>
+                </div><br>
+
+                <div>
+                    <button class="btn w-100 btn-success" (click)="login()"> Login</button>
+                </div><br>
+
+                <div>
+                    <label class="checkbox-container">
+                        <input type="checkbox">Remember me
+                        <span class="checkmark"></span>
+                    </label>
+                    <span class="float-right">
+                        <a>Register</a>
+                    </span>
+                </div><br>
+
+                <div>
+                    Forgot your password? Click <a>here</a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
+
