--- a/src/app/layout/show-episodes/show-episodes.component.scss
+++ b/src/app/layout/show-episodes/show-episodes.component.scss
@@ -1,3 +1,11 @@
 .rating-text {
   font-size: 1.5rem;
 }
+ul.pagination {
+  li.page-item{
+    a.page-link {
+      background: #000000;
+      border-color: #28a745;
+    }
+  }
+}
